--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
   "scripts": {
-    "build": "webpack"
+    "start": "webpack-dev-server --inline",
+    "build": "webpack --devtool source-map",
+    "release": "-- --optimize-minimize"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.3",
     "awesome-typescript-loader": "^3.2.3",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
     "html-webpack-pug-plugin": "^0.2.1",
     "i": "^0.3.5",
+    "postcss": "^6.0.10",
+    "postcss-loader": "^2.0.6",
+    "poststylus": "^1.0.0",
     "pug": "^2.0.0-rc.3",
     "pug-html-loader": "^1.1.5",
-    "pug-loader": "^2.3.0",
     "raw-loader": "^0.5.1",
+    "rucksack-css": "^1.0.2",
     "source-map-loader": "^0.2.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "typescript": "^2.5.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.5"
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   },
   "name": "webpackstudy",
   "version": "1.0.0",
