--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pug-html-loader": "^1.1.5",
     "raw-loader": "^0.5.1",
     "rucksack-css": "^1.0.2",
+    "shader-loader": "^1.3.1",
     "source-map-loader": "^0.2.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
@@ -35,6 +36,9 @@
   },
   "dependencies": {
     "@types/three": "^0.84.20",
+    "gsap": "^1.20.2",
+    "jquery": "^3.2.1",
+    "stats-js": "^1.0.0-alpha1",
     "three": "^0.87.1"
   },
   "author": "",
