--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typescript": "^2.5.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-dev-server": ">=3.1.11"
   },
   "name": "webpackstudy",
   "version": "1.0.0",
